libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-generic-absolute-path.jsonc
//@ run: fail
//@ description: An absolute path in generic position should be rejected
[
  "::kernel::special_form::type",
  "Foo<::foo::Bar>",
  //~^ ERROR expected a simple type parameter
  { "#struct": { "foo": "Integer" } },
  "_"
]
